<resources>
    <string name="app_name">simple TextSaver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="enter_your_username_or_email">Enter Your Username or Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="dunijet">Dunijet</string>
    <string name="create_an_account">Create an account</string>
    <string name="click_here">click here</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_nummber">Enter Your Nummber</string>
    <string name="i_have_an_account">i have an account</string>
    <string name="sing_up">sing up</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="account">Account</string>

</resources>